- Responsive changes - Contact dark mode fixes

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -22,3 +22,13 @@ a {
 html {
   scroll-behavior: smooth;
 }
+
+@media only screen and (max-width: 600px) {
+  #hero-image {
+    top: 80px;
+    bottom: auto;
+  }
+  #hero-hi {
+    margin-top: 80px;
+  }
+}
